任务11 用户简介卡片基本完成

--- a/index.html
+++ b/index.html
@@ -6,58 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的个人简历</title>
     <link rel="stylesheet" href="./a.css">
+    <script src="//at.alicdn.com/t/font_1233691_uxb0u0au1gj.js"></script>
+    <style type="text/css">
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
+    </style>
 </head>
 
 <body>
-<div class="topNavBar clearfix">
-    <a class="logo" href="" alt="logo">
-        <span class="rs">RS</span><span class="card">card</span>
-    </a>
-    <nav>
-        <ul class="clearfix">
-            <li><a href="#">关于</a></li>
-            <li><a href="#">技能</a></li>
-            <li><a href="#">作品</a></li>
-            <li><a href="#">博客</a></li>
-            <li><a href="#">日历</a></li>
-            <li><a href="#">联系方式</a></li>
-            <li><a href="#">其他</a></li>
-        </ul>
-    </nav>
-</div>
-
-    <div class="banner">
+    <div class="topNavBar">
+        <div class="topNavBar-inner clearfix">
+            <a class="logo" href="" alt="logo">
+                <span class="rs">RS</span>
+                <span class="card">card</span>
+            </a>
+            <nav>
+                <ul class="clearfix">
+                    <li><a href="#">关于</a></li>
+                    <li><a href="#">技能</a></li>
+                    <li><a href="#">作品</a></li>
+                    <li><a href="#">博客</a></li>
+                    <li><a href="#">日历</a></li>
+                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">其他</a></li>
+                </ul>
+            </nav>
+        </div>
 
     </div>
+
+    <div class="banner">
+        <div class="mask"></div>
+    </div>
     <main>
-        <div class="card">
-            <div class="picture">
-                <img src="" alt="头像">
+        <div class="userCard">
+            <div class="pictureAndText clearfix">
+                <div class="picture">
+                    <img src="./img/avatar.jpg" alt="头像">
+                </div>
+                <div class="text">
+                    <span class="welcome">Hello
+                        <span class="triangle"></span>
+                    </span>
+                    <h1>董晓兴</h1>
+                    <p>前端开发工程师</p>
+                    <hr>
+                    <dl class="clearfix">
+                        <dt>年龄</dt>
+                        <dd>18</dd>
+                        <dt>所在城市</dt>
+                        <dd>青岛</dd>
+                        <dt>邮箱</dt>
+                        <dd>dongxiaoxing0@qq.com</dd>
+                        <dt>手机</dt>
+                        <dd>13021669903</dd>
+                    </dl>
+                </div>
             </div>
-            <div class="text">
-                <span class="welcome">Hello</span>
-                <h1>董晓兴</h1>
-                <p>前端开发工程师</p>
-                <hr>
-                <dl>
-                    <dt>年龄</dt>
-                    <dd>18</dd>
-                    <dt>所在城市</dt>
-                    <dd>青岛</dd>
-                    <dt>邮箱</dt>
-                    <dd>dongxiaoxing0@qq.com</dd>
-                    <dt>手机</dt>
-                    <dd>13021669903</dd>
-                </dl>
-            </div>
+            
             <footer class="media">
-                <a href="#"><img src="..." alt="..."></a>
-                <a href="#"><img src="..." alt="..."></a>
-                <a href="#"><img src="..." alt="..."></a>
-                <a href="#"><img src="..." alt="..."></a>
-                <a href="#"><img src="..." alt="..."></a>
-                <a href="#"><img src="..." alt="..."></a>
-                <a href="#"><img src="..." alt="..."></a>
+                <a href="#"><svg class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-github"></use>
+                </svg></a>
+                <a href="#"><svg class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-weibo"></use>
+                </svg></a>
+                <a href="#"><svg class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-ttww"></use>
+                </svg></a>
             </footer>
         </div>
         <a href="#" class="button">下载PDF简历</a>
