--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <script src="//at.alicdn.com/t/font_1233691_uxb0u0au1gj.js"></script>
     <style type="text/css">
         .icon {
-           width: 1em; height: 1em;
-           vertical-align: -0.15em;
-           fill: currentColor;
-           overflow: hidden;
+            width: 1em;
+            height: 1em;
+            vertical-align: -0.15em;
+            fill: currentColor;
+            overflow: hidden;
         }
     </style>
 </head>
@@ -67,44 +68,103 @@
                     </dl>
                 </div>
             </div>
-            
+
             <footer class="media">
                 <a href="#"><svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-github"></use>
-                </svg></a>
+                        <use xlink:href="#icon-github"></use>
+                    </svg></a>
                 <a href="#"><svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-weibo"></use>
-                </svg></a>
+                        <use xlink:href="#icon-weibo"></use>
+                    </svg></a>
                 <a href="#"><svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-ttww"></use>
-                </svg></a>
+                        <use xlink:href="#icon-ttww"></use>
+                    </svg></a>
             </footer>
         </div>
-        <a href="#" class="button">下载PDF简历</a>
-        <p>这里是我的一段话</p>
+        <div class="resumeDownload">
+            <a href="./resume.pdf" class="button" target="_blank" download>下载PDF简历</a>
+        </div>
+        <p class="selfIntroduction">
+            这里是我的自我介绍，这里是我的自我介绍。
+            <br>这里是我的自我介绍，这里是我的自我介绍。
+            这里是我的自我介绍，这里是我的自我介绍。
+        </p>
     </main>
     <section class="skills">
         <h2>技能</h2>
-        <ul>
-            <li>HTML5&CSS3</li>
-            <li>JavaScript</li>
-            <li>jQuery</li>
-            <li>Vue.js</li>
-            <li>React.js</li>
-            <li>Node.js</li>
-        </ul>
-    </section>
-    <section class="">
-        <h2>作品集</h2>
-        <ol>
-            <li>所有</li>
-            <li>框架</li>
-            <li>原生JS&CSS</li>
+        <ol class="clearfix">
+            <li>
+                <h3>HTML5&CSS3</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3>JavaScript</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3> jQuery</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3> Vue.js</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3>React.js</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3>Node.js</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
         </ol>
-        <div class="jobs">
-            <div class="big"></div>
-            <div class="small"></div>
-            <div class="small"></div>
+    </section>
+    <section class="portfolio">
+        <h2>作品集</h2>
+        <nav>
+            <ol class="clearfix">
+                <li id="portfolioAll">所有</li>
+                <li id="portfolioFramework">框架</li>
+                <li id="portfolioVallina">原生JS&CSS</li>
+            </ol>
+            <div id="portfolioBar" class="bar  state-1">
+                <div class="bar-inner"></div>
+            </div>
+        </nav>
+        <script>
+            portfolioAll.onclick= function(){
+                portfolioBar.className = 'bar state-1';
+            }
+            portfolioFramework.onclick= function(){
+                portfolioBar.className = 'bar state-2';
+            }
+            portfolioVallina.onclick= function(){
+                portfolioBar.className = 'bar state-3';
+            }
+        </script>
+
+        <div class="works">
+            <div class="pic-1">
+                <img src="./img/1.jpg" alt="">
+            </div>
+            <div class="pic-2">
+                <img src="./img/2.jpg" alt="">
+            </div>
+            <div class="pic-3">
+                <img src="./img/3.jpg" alt="">
+            </div>
         </div>
     </section>
 
