添加导航栏子菜单

--- a/index.html
+++ b/index.html
@@ -33,8 +33,22 @@
                 <ul class="clearfix">
                     <li><a href="#">关于</a></li>
                     <li><a href="#">技能</a></li>
-                    <li><a href="#">作品</a></li>
-                    <li><a href="#">博客</a></li>
+                    <li>
+                        <a href="#">作品</a>
+                        <ul>
+                            <li>作品1</li>
+                            <li>作品2</li>
+                            <li>作品3</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">博客</a>
+                        <ul>
+                            <li>博客1</li>
+                            <li>博客2</li>
+                            <li>博客3</li>
+                        </ul>
+                    </li>
                     <li><a href="#">日历</a></li>
                     <li><a href="#">联系方式</a></li>
                     <li><a href="#">其他</a></li>
@@ -183,6 +197,16 @@
                 topNavBar.classList.add('sticky');
             }
         }
+        let li = document.querySelectorAll('.topNavBar nav > ul > li');
+        for(let i = 0; i < li.length-1; i++){
+            li[i].onmouseenter = function (e) {
+                e.currentTarget.classList.add('active') 
+            }
+            li[i].onmouseleave = function (e) {
+                e.currentTarget.classList.remove('active')
+            }
+        }
+
     </script>
 
 </body>
