添加页面缓动效果

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </head>
 
 <body>
-    <div id="siteWelcome"  class="siteWelcome active">
+    <div id="siteWelcome" class="siteWelcome active">
         <div class="loading"></div>
     </div>
-    <div id="topNavBar"   class="topNavBar">
+    <div id="topNavBar" class="topNavBar">
         <div class="topNavBar-inner clearfix">
             <a class="logo" href="" alt="logo">
                 <span class="rs">RS</span>
@@ -185,35 +185,53 @@
             </div>
         </div>
     </section>
+    <script src="https://cdn.bootcdn.net/ajax/libs/tween.js/0.11.0/Tween.js"></script>
     <script>
-        setTimeout(function(){
+        setTimeout(function () {
             siteWelcome.classList.remove('active');
-        },2000);
+        }, 2000);
 
-        window.onscroll = function(){
-            if(window.scrollY == 0){
+        window.onscroll = function () {
+            if (window.scrollY == 0) {
                 topNavBar.classList.remove('sticky');
-            }else{
+            } else {
                 topNavBar.classList.add('sticky');
             }
         }
         let li = document.querySelectorAll('.topNavBar nav > ul > li');
-        for(let i = 0; i < li.length-1; i++){
+        for (let i = 0; i < li.length - 1; i++) {
             li[i].onmouseenter = function (e) {
-                e.currentTarget.classList.add('active') 
+                e.currentTarget.classList.add('active')
             }
             li[i].onmouseleave = function (e) {
                 e.currentTarget.classList.remove('active')
             }
         }
         let aTags = document.querySelectorAll('.topNavBar nav > ul > li > a');
-        for(let i = 0; i < aTags.length; i++){
+        for (let i = 0; i < aTags.length; i++) {
             aTags[i].onclick = function (e) {
                 e.preventDefault();
                 let href = e.currentTarget.getAttribute('href');
                 let targetElement = document.querySelector(href);
-                let offset = targetElement.offsetTop;
-                window.scrollTo(0,offset-70);
+                let top = targetElement.offsetTop;
+                let currentTop = window.scrollY;
+                let s = Math.abs(currentTop - top);
+                let t = (s / 100) * 300;
+                if(t > 500){t = 500}
+                function animate(time) {
+                    requestAnimationFrame(animate)
+                    TWEEN.update(time)
+                }
+                requestAnimationFrame(animate)
+
+                const coords = { y: currentTop } 
+                const tween = new TWEEN.Tween(coords) 
+                    .to({ y: top - 70 }, 1000) 
+                    .easing(TWEEN.Easing.Quadratic.InOut) 
+                    .onUpdate(() => {
+                        window.scrollTo(0,coords.y)
+                    })
+                    .start()
             }
         }
     </script>
