修改留言区

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             
             </ol>
             <form action="" name="messages">
-                <input type="text" name="userName" id="userName">
-                <input type="text" name="messageContent" id="messageContent">
+                <label>用户名</label><input type="text" name="userName" id="userName">
+                <label for="">留言</label><input type="text" name="messageContent" id="messageContent">
                 <input type="submit" value="提交">
             </form>
         </div>
