引入mvc思想组织代码

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <div class="swiper-button-next"></div>
         </div>
     </section>
-    <section class="messages">
+    <section location class="messages">
         <h2>留言</h2>
         <div class="messages-wrapper">
             <ol class="messageBoard">
