继续用MVC组织代码

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <ol class="messageBoard">
             
             </ol>
-            <form action="" name="messages">
+            <form action="" name="messages" autocomplete="off">
                 <label>用户名</label><input type="text" name="userName" id="userName">
                 <label for="">留言</label><input type="text" name="messageContent" id="messageContent">
                 <input type="submit" value="提交">
@@ -176,6 +176,7 @@
     </section>
     <script src="https://cdn.bootcdn.net/ajax/libs/tween.js/0.11.0/Tween.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="./View.js"></script>
     <script src="./smoothly-navgation.js"></script>
     <script src="./sticky-nav-bar.js"></script>
     <script src="./init-swiper.js"></script>
