--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/tween.js/0.11.0/Tween.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./View.js"></script>
+    <script src="./Model.js"></script>
     <script src="./smoothly-navgation.js"></script>
     <script src="./sticky-nav-bar.js"></script>
     <script src="./init-swiper.js"></script>
