--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./View.js"></script>
     <script src="./Model.js"></script>
+    <script src="./Controller.js"></script>
     <script src="./smoothly-navgation.js"></script>
     <script src="./sticky-nav-bar.js"></script>
     <script src="./init-swiper.js"></script>
